# LedController

./: .gitmodules  CMakeLists.txt  README.md  mbed_app.json  platformio.ini
common/: led_device.h
device/: .gitignore  CMakeLists.txt  cmake-variants.yaml  custom_targets.json  mbed_app.json  mbed_app.json5
device/.devcontainer/: Dockerfile  devcontainer.json
device/docker/: Dockerfile
device/src/: apds9960_driver.cpp  apds9960_driver.hpp  auto_led_controller.cpp  auto_led_controller.hpp  fir_filter.hpp  iled_controller.hpp  led_component.cpp  led_component.hpp  led_controller.cpp  led_controller.hpp  led_curve.cpp  led_curve.hpp  main.cpp  settings.cpp  settings.hpp  temp_manager.cpp  temp_manager.hpp  usb_led_device.cpp  usb_led_device.hpp
doc/: pcb.fzz
host/: LEDDevice.cpp  LEDs.exe.manifest  LEDs.rc  LEDs.sln  LEDs.vcxproj  LEDs.vcxproj.filters  WinMain.cpp  packages.config  pch.h
host/LEDs/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  LEDCurve.cpp  LEDCurve.h  LEDDevice.cpp  LEDDevice.h  LEDs.rc  LEDs.vcxproj  LEDs.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  TempManager.cpp  TempManager.h  app.manifest  packages.config  pch.h  resource.h  undoc.h
host/LEDsTests/: LEDsTests.vcxproj  TestLEDCurve.cpp
host/Xaml/: App.base.h  App.cpp  App.h  App.idl  App.xaml  MainPage.cpp  MainPage.h  MainPage.xaml  Xaml.vcxproj  Xaml.vcxproj.filters  packages.config  pch.h
host_new/: device.go  go.mod
host_new/cmd/leds/: main.go
include/: settings.h
misc/: usb_test.py  usb_test_win.py
src/: led_component.cpp  led_component.hpp  led_controller.cpp  led_controller.hpp  main.cpp  settings.cpp  settings.hpp  usb_led_controller.cpp  usb_led_controller.hpp  usb_led_device.cpp  usb_led_device.hpp
